
option java_outer_classname="IsLockedCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message IsLockedCommand 
{
	optional bytes key = 1;
	optional string lockId = 2;
	optional int64 requestId = 3;
}