
option java_outer_classname="IsLockedResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message IsLockedResponse {
	optional bool isLocked = 1;
	optional string lockId = 2;
	optional int64 lockTime = 3;
}